--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </header>
 
-  <!-- Audio (place a small wav at assets/backsound.wav) -->
+  <!-- Audio (backsound) -->
   <audio id="bgm" loop preload="auto" src="assets/backsound.wav"></audio>
   <button id="audioToggle" class="audio-toggle" aria-pressed="false" title="Putar / Hentikan musik">♪</button>
 
