--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Scraftology — Hijab Segiempat by Nismah Faruk</title>
-  <meta name="description" content="Scraftology - koleksi hijab segiempat modern. Pesan online, checkout cepat." />
+  <title>Melted Mood — Puding Kekinian</title>
+  <meta name="description" content="Melted Mood - toko puding aesthetic oleh Nismah Faruk. Pesan online, checkout cepat." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="nav">
     <div class="brand">
-      <div class="logo">🧕</div>
+      <div class="logo">🍮</div>
       <div class="brand-text">
-        <div class="store-name">Scraftology</div>
+        <div class="store-name">Melted Mood</div>
         <small class="owner">by Nismah Faruk</small>
       </div>
     </div>
 
     <nav class="links" aria-label="Main navigation">
       <a href="#hero">Beranda</a>
-      <a href="#menu">Koleksi</a>
+      <a href="#menu">Menu</a>
       <a href="#about">Tentang</a>
       <a href="#checkout">Checkout</a>
     </nav>
@@ -29,64 +29,60 @@
     </div>
   </header>
 
-  <!-- Audio (backsound) -->
+  <!-- Audio backgound (short wav included) -->
   <audio id="bgm" loop preload="auto" src="assets/backsound.wav"></audio>
   <button id="audioToggle" class="audio-toggle" aria-pressed="false" title="Putar / Hentikan musik">♪</button>
 
-  <!-- HERO (slider) -->
+  <!-- HERO slider -->
   <section id="hero" class="hero">
-    <div class="slider" id="slider" role="region" aria-label="Slider produk Scraftology">
+    <div class="slider" id="slider" role="region" aria-label="Slider promosi Melted Mood">
       <div class="slides">
-        <div class="slide" style="--bg:url('https://images.unsplash.com/photo-1542060748-3480c4724a3e?q=80&w=1400&auto=format&fit=crop')">
+        <div class="slide" style="--bg:url('https://images.unsplash.com/photo-1563805042-7684c019e1cb?q=80&w=1400&auto=format&fit=crop')">
           <div class="slide-box">
-            <h1>Scraftology — Elegan & Lembut</h1>
-            <p>Hijab segiempat premium — warna modern, nyaman dipakai.</p>
-            <a class="btn primary" href="#menu">Lihat Koleksi</a>
+            <h1>Melted Mood — Puding Aesthetic</h1>
+            <p>Puding lembut, rasa menenangkan, tampilan instagrammable.</p>
+            <a class="btn primary" href="#menu">Lihat Menu</a>
           </div>
         </div>
-
-        <div class="slide" style="--bg:url('https://images.unsplash.com/photo-1619773913772-8190b8f2b6a8?q=80&w=1400&auto=format&fit=crop')">
+        <div class="slide" style="--bg:url('https://images.unsplash.com/photo-1551024709-8f23befc6f87?q=80&w=1400&auto=format&fit=crop')">
           <div class="slide-box">
-            <h1>Motif & Polos Pilihan</h1>
-            <p>Tekstur lembut, jahitan rapi, ukuran 110x110 cm.</p>
-            <a class="btn outline" href="#menu">Belanja Sekarang</a>
+            <h1>Varian Warna Pastel</h1>
+            <p>Rasa klasik dan modern — cocok untuk hadiah atau treat sendiri.</p>
+            <a class="btn outline" href="#menu">Pesan Sekarang</a>
           </div>
         </div>
-
-        <div class="slide" style="--bg:url('https://images.unsplash.com/photo-1503341455253-b2e723bb3dbb?q=80&w=1400&auto=format&fit=crop')">
+        <div class="slide" style="--bg:url('https://images.unsplash.com/photo-1505250469679-203ad9ced0cb?q=80&w=1400&auto=format&fit=crop')">
           <div class="slide-box">
-            <h1>Hadiah yang Cantik</h1>
-            <p>Packing ready to gift — pesan custom untuk event.</p>
+            <h1>Custom untuk Event</h1>
+            <p>Pesan custom untuk ulang tahun, baby shower, atau corporate gift.</p>
             <a class="btn" href="#checkout">Checkout</a>
           </div>
         </div>
       </div>
-
       <button class="control prev" id="prev" aria-label="Sebelumnya">❮</button>
       <button class="control next" id="next" aria-label="Berikutnya">❯</button>
       <div class="dots" id="dots" aria-hidden="true"></div>
     </div>
   </section>
 
-  <!-- PRODUCT GRID -->
+  <!-- MENU -->
   <section id="menu" class="section">
     <div class="section-head">
-      <h2>Koleksi Hijab Segiempat</h2>
-      <p>Pilih motif & warna favorit — bahan premium, nyaman seharian.</p>
+      <h2>Menu Puding Favorit</h2>
+      <p>Sajian lembut dengan kombinasi rasa dan topping menarik.</p>
     </div>
-
     <div id="menuGrid" class="menu-grid" aria-live="polite"></div>
   </section>
 
   <!-- ABOUT -->
   <section id="about" class="section about">
     <div class="about-card">
-      <h3>Tentang Scraftology</h3>
-      <p>Scraftology berdiri atas kecintaan pada kain berkualitas dan detail estetika. Dirancang supaya nyaman, cantik, dan tahan lama.</p>
+      <h3>Tentang Melted Mood</h3>
+      <p>Melted Mood dibuat dari bahan pilihan, tanpa pengawet, dan disajikan segar. Fokus kami: rasa lembut, tampilan cantik, dan pelayanan ramah.</p>
       <ul>
-        <li>Voal premium, satin, dan silk blend</li>
-        <li>Ukuran 110×110 cm (standard)</li>
-        <li>Packing rapi, siap jadi hadiah</li>
+        <li>Bahan lokal & premium</li>
+        <li>Varian bebas lactose tersedia</li>
+        <li>Pesan custom & packing cantik</li>
       </ul>
     </div>
   </section>
@@ -97,7 +93,6 @@
       <h2>Checkout</h2>
       <p>Periksa pesanan dan lengkapi data pengiriman.</p>
     </div>
-
     <div class="checkout-wrap">
       <div class="summary">
         <h3>Ringkasan Pesanan</h3>
@@ -107,7 +102,6 @@
           <div><span>Pajak (10%)</span><span id="tax">Rp0</span></div>
           <div class="grand"><strong>Total</strong><strong id="grandTotal">Rp0</strong></div>
         </div>
-
         <a id="cartCheckout" class="btn outline full" href="#checkout">Cart Checkout</a>
       </div>
 
@@ -133,12 +127,10 @@
             <option value="qris">QRIS</option>
           </select>
         </label>
-
         <button type="submit" class="btn primary full">Buat Pesanan</button>
         <p class="muted">(Simulasi checkout — tanpa pembayaran online)</p>
       </form>
     </div>
-
     <div id="toast" class="toast" aria-live="polite"></div>
   </section>
 
@@ -161,7 +153,7 @@
   <div id="overlay" class="overlay" hidden></div>
 
   <footer class="footer">
-    <p>&copy; <span id="year"></span> Scraftology — Nismah Faruk</p>
+    <p>&copy; <span id="year"></span> Melted Mood — Nismah Faruk</p>
   </footer>
 
   <script src="app.js"></script>
