--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Puddiland — Toko Puding</title>
   <meta name="description" content="Puddiland - puding lezat harian. Alamat: Jl. Dipenegori 74, Bogor." />
-  <link rel="preload" href="assets/svg/logo.svg" as="image" type="image/svg+xml">
+  <link rel="preload" href="assets/svg/logo.svg.png" as="image" type="image/svg+xml">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="nav">
     <div class="brand">
-      <img src="assets/svg/logo.svg" alt="Logo Puddiland" width="120" height="34">
+      <img src="assets/svg/logo.svg.png" alt="Logo Puddiland" width="120" height="34">
       <div class="brand-text">
         <div class="store-name">Puddiland</div>
         <small class="tagline">Puding Lezat, Hati Senang</small>
